# marco-polo

./: pyproject.toml
.github/workflows/: publish-base-to-pypi.yml  publish-test-to-pypi.yml  publish-timeseries-to-pypi.yml  publish-to-pypi.yml  test.yml
juancobo6_marco_polo/: .coverage  pyproject.toml
juancobo6_marco_polo_timeseries/: pyproject.toml
src/marco_polo/: __init__.py
tests/: test_marco_polo.py
