[project]
name = "marco-polo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JuanCobo", email = "juan.cobo@baobabsoluciones.es" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
