[project]
name = "juancobo6-marco-polo"
version = "0.1.0"
description = "Python implementation of the game of marco polo."
readme = "README.md"
authors = [
    { name = "JuanCobo", email = "juan.cobo@baobabsoluciones.es" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
